--- a/hulu.plist
+++ b/hulu.plist
@@ -39,7 +39,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>葫芦测速器</string>
+				<string>葫芦加速器</string>
 			</dict>
 		</dict>
 	</array>
